// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gatsby-plugin-include resolves one import 1`] = `
Object {
  "children": Array [
    Object {
      "position": Position {
        "end": Object {
          "column": 1,
          "line": 3,
          "offset": 21,
        },
        "indent": Array [
          1,
        ],
        "start": Object {
          "column": 1,
          "line": 2,
          "offset": 1,
        },
      },
      "type": "import",
      "value": "import ImportedComponent0 from \\"./foo.mdx\\";",
    },
    Object {
      "position": Position {
        "end": Object {
          "column": 1,
          "line": 3,
          "offset": 21,
        },
        "indent": Array [
          1,
        ],
        "start": Object {
          "column": 1,
          "line": 2,
          "offset": 1,
        },
      },
      "type": "jsx",
      "value": "<ImportedComponent0/>",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 1,
      "line": 3,
      "offset": 21,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`gatsby-plugin-include resolves two imports 1`] = `
Object {
  "children": Array [
    Object {
      "position": Position {
        "end": Object {
          "column": 20,
          "line": 2,
          "offset": 20,
        },
        "indent": Array [],
        "start": Object {
          "column": 1,
          "line": 2,
          "offset": 1,
        },
      },
      "type": "import",
      "value": "import ImportedComponent0 from \\"./foo.mdx\\";",
    },
    Object {
      "position": Position {
        "end": Object {
          "column": 1,
          "line": 5,
          "offset": 42,
        },
        "indent": Array [
          1,
        ],
        "start": Object {
          "column": 1,
          "line": 4,
          "offset": 22,
        },
      },
      "type": "import",
      "value": "import ImportedComponent1 from \\"./bar.mdx\\";",
    },
    Object {
      "position": Position {
        "end": Object {
          "column": 20,
          "line": 2,
          "offset": 20,
        },
        "indent": Array [],
        "start": Object {
          "column": 1,
          "line": 2,
          "offset": 1,
        },
      },
      "type": "jsx",
      "value": "<ImportedComponent0/>",
    },
    Object {
      "position": Position {
        "end": Object {
          "column": 1,
          "line": 5,
          "offset": 42,
        },
        "indent": Array [
          1,
        ],
        "start": Object {
          "column": 1,
          "line": 4,
          "offset": 22,
        },
      },
      "type": "jsx",
      "value": "<ImportedComponent1/>",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 1,
      "line": 5,
      "offset": 42,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;
